support listing notifications
